--- a/css/comm.css
+++ b/css/comm.css
@@ -2,9 +2,46 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
+    transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
-.ovh{
-    overflow:hidden;
+
+body {
+    background-color: #696969;
+    font-size: 16px;
+}
+
+ul,
+li,
+dd,
+dl,
+dt,
+ol {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+color: #292525;
+}
+
+.ovh {
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.fullFrame {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
